--- a/portfolio.html
+++ b/portfolio.html
@@ -284,7 +284,7 @@
 
 
   <!--page2 -->
-  <section class="commercial_pinto pintoWord">
+<!--   <section class="commercial_pinto pintoWord">
     <div class="container">
       <div class="row">
         <h3>Commercial</h3>
@@ -293,7 +293,7 @@
         <source src="video/commercial.mp4" type="video/mp4">
       </video>
     </div>
-  </section>
+  </section> -->
 
 
 
