put on pinto link, delete owl

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ On the design side I can think for the engineer, on the engineering side I can u
 
         <div class="portfolio-container full-width ">
           <div class="row">
-            <a href="file:///Users/krystalteng/Desktop/portfolio/my_profolio/portfolio.html">
+            <a href="portfolio.html">
             <div class="portfolio-item col-md-6 h-effect">
               <div class="item-content text-center">
                 <h3 class="portfolio-cata">Pinto</h3>
@@ -139,7 +139,7 @@ On the design side I can think for the engineer, on the engineering side I can u
 
           <div class="row">
             <div class="portfolio-item col-md-6">
-              <div class="item-content-1 text-center owl-carousel owl-theme">
+              <div class="item-content-1 text-center ">
                 <img src="img/mua_cover.png" class="img-fluid" alt="portfolio-img1">
                 <!-- <img src="img/fake.png" class="img-fluid" alt="portfolio-img1"> -->
               </div>
@@ -171,7 +171,7 @@ On the design side I can think for the engineer, on the engineering side I can u
             </div>
 
             <div class="portfolio-item col-md-6">
-              <div class="item-content-1 text-center owl-carousel owl-theme">
+              <div class="item-content-1 text-center ">
                 <img src="img/fake.png" class="img-fluid" alt="portfolio-img1">
                 <img src="img/fake.png" class="img-fluid" alt="portfolio-img1">
               </div>
