--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ On the design side I can think for the engineer, on the engineering side I can u
             </div>
 
             <div class="portfolio-item col-md-6">
-              <div class="item-content-1 text-center owl-carousel owl-theme">
+              <div class="item-content-1 text-center">
                 <img src="img/pinto-pic.jpg" class="img-fluid" alt="portfolio-img1">
                 <!-- <img src="img/fake.png" class="img-fluid" alt="portfolio-img1"> -->
               </div>
