contact email back-end add on(html)

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ On the design side I can think for the engineer, on the engineering side I can u
         </div>
 
         <div class="contact-form ">
-          <form action="mail.php" method="POST">
+          <form id="my-form" action="https://formspree.io/f/mlevbljw" method="POST">
           <div class="row d-flex justify-content-center">
             <div class="col-md-3">
               <input type="text" id="name" name="name" placeholder="Enter Name" required autofocus/>
@@ -224,15 +224,17 @@ On the design side I can think for the engineer, on the engineering side I can u
                 <input type="submit" class="" id="submit" value="Submit">
               </div>
             </div>
+            </form>
+            <!-- <div id="status"></div> -->
             <div class="contact-line1 full-width ">
               <hr>
             </div>
             <div class="contact-line2 full-width ">
               <hr>
             </div>
-          </form>
-        </div>
 
+
+        </div>
 
 
 
