--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ On the design side I can think for the engineer, on the engineering side I can u
     <!-- js -->
     <script type="text/javascript" src="main.js"></script>
     <!-- owl carousel -->
-    <script type="text/javascript" src="owl.carousel.min.js"></script>
+<!--     <script type="text/javascript" src="owl.carousel.min.js"></script> -->
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
